# SweetsVendingMachine

./: .gitignore  CMakeLists.txt  README.md  demo.py  pyproject.toml
include/: aplay.h  leaving_time.h  nfc_bridge.h  read_csv.h
qml/: Main.qml  Main2.qml  demo.py  demo2.py
qml/components/: BigButton.qml  ProductSlot.qml  ZundamonCharacter.qml
src/: aplay.cpp  leaving_time.cpp  main.cpp  nfc_bridge.cpp  nfc_reader.py  read_csv.cpp
