[project]
name = "pasori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libusb1>=3.4.0",
    "ndeflib>=0.3.3",
    "nfcpy>=1.0.4",
    "notion-client>=3.1.0",
    "pybind11>=3.0.4",
    "pydes>=2.0.1",
    "pyserial>=3.5",
    "pyside6>=6.11.1",
    "python-dotenv>=1.2.2",
]
